fix(SectionTitle): Position on small breakpoint (#408)

--- a/src/components/structural/home-section-title/home-section-title.module.css
+++ b/src/components/structural/home-section-title/home-section-title.module.css
@@ -61,7 +61,7 @@
 }
 
 .right {
-  left: calc(100% - 48px);
+  left: calc(100% - 58px);
 
   @media (--bp-md) {
     left: calc(100% - 70px);
